Add microphone and camera access to plist

--- a/extras/Projucer/Builds/MacOSX/Info-App.plist
+++ b/extras/Projucer/Builds/MacOSX/Info-App.plist
@@ -40,6 +40,10 @@
     <string>ROLI Ltd.</string>
     <key>NSHighResolutionCapable</key>
     <true/>
+    <key>NSCameraUsageDescription</key>
+    <string>The Live Build engine requires access to the Camera.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>The Live Build engine requires access to the Microphone.</string>
     <key>CFBundleDocumentTypes</key>
     <array>
       <dict>
