Added Builds/Android/app/.cxx directory to .gitignore to squash some noise when building Android projects in tree

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ profile
 **/Builds/Android/local.properties
 **/Builds/Android/app/build
 **/Builds/Android/app/.externalNativeBuild
+**/Builds/Android/app/.cxx
 **/Builds/Android/lib/build
 **/Builds/Android/lib/.externalNativeBuild
 **/Builds/CLion/cmake-build-*
