--- a/extras/AudioPluginHost/Builds/Android/app/CMakeLists.txt
+++ b/extras/AudioPluginHost/Builds/Android/app/CMakeLists.txt
@@ -543,6 +543,8 @@ add_library( ${BINARY_NAME}
     "../../../../../modules/juce_core/files/juce_FileSearchPath.cpp"
     "../../../../../modules/juce_core/files/juce_FileSearchPath.h"
     "../../../../../modules/juce_core/files/juce_MemoryMappedFile.h"
+    "../../../../../modules/juce_core/files/juce_RangedDirectoryIterator.cpp"
+    "../../../../../modules/juce_core/files/juce_RangedDirectoryIterator.h"
     "../../../../../modules/juce_core/files/juce_TemporaryFile.cpp"
     "../../../../../modules/juce_core/files/juce_TemporaryFile.h"
     "../../../../../modules/juce_core/files/juce_WildcardFileFilter.cpp"
@@ -1906,6 +1908,8 @@ set_source_files_properties("../../../../../modules/juce_core/files/juce_FileOut
 set_source_files_properties("../../../../../modules/juce_core/files/juce_FileSearchPath.cpp" PROPERTIES HEADER_FILE_ONLY TRUE)
 set_source_files_properties("../../../../../modules/juce_core/files/juce_FileSearchPath.h" PROPERTIES HEADER_FILE_ONLY TRUE)
 set_source_files_properties("../../../../../modules/juce_core/files/juce_MemoryMappedFile.h" PROPERTIES HEADER_FILE_ONLY TRUE)
+set_source_files_properties("../../../../../modules/juce_core/files/juce_RangedDirectoryIterator.cpp" PROPERTIES HEADER_FILE_ONLY TRUE)
+set_source_files_properties("../../../../../modules/juce_core/files/juce_RangedDirectoryIterator.h" PROPERTIES HEADER_FILE_ONLY TRUE)
 set_source_files_properties("../../../../../modules/juce_core/files/juce_TemporaryFile.cpp" PROPERTIES HEADER_FILE_ONLY TRUE)
 set_source_files_properties("../../../../../modules/juce_core/files/juce_TemporaryFile.h" PROPERTIES HEADER_FILE_ONLY TRUE)
 set_source_files_properties("../../../../../modules/juce_core/files/juce_WildcardFileFilter.cpp" PROPERTIES HEADER_FILE_ONLY TRUE)
